test/langtools/tools/javac/platform/RequiresIdentityTest.out
RequiresIdentityTest.java:16:18: compiler.warn.attempt.to.use.value.based.where.identity.expected
- compiler.err.warnings.and.werror
1 error
1 warning
